Minor changes and bugfixes (#71)